@startuml
'https://plantuml.com/class-diagram

skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class CreateCourseUI <<presentation>>
class CreateCourseController<<application>>
class CourseManagementService<<service>>
class Course<<course>>
class PersistenceContext<<persistence>>
class RepositoryFactory<<factory>>
class UserRepository <<repository>>
class CourseRepository <<repository>>
class Course <<course>>

class CreateCourseUI{
show()
}

class CreateCourseController{
addCourse(String, String, String, String, Integer, Integer, String)
}

class CourseManagementService{
create(String, String, String, String, Integer, Integer, String)
}

class Course{
Course(CourseName, CourseCode, CourseEdition, CourseDescription, CourseMaxNumberLimit, CourseMinNumberLimit, CourseState, User)
necessaryParameters(CourseName, CourseCode, CourseEdition, CourseMaxNumberLimit, User)
validateMaxMin(CourseMaxNumberLimit, CourseMinNumberLimit)
}

class PersistenceContext{
repositories()
}

class RepositoryFactory{
users()
courses()
}
CreateCourseUI -.-> CreateCourseController

CreateCourseController --> CourseManagementService
CreateCourseController --> PersistenceContext
CreateCourseController --> RepositoryFactory

CourseManagementService --> Course

Course --> PersistenceContext
Course --> RepositoryFactory

RepositoryFactory --> UserRepository
RepositoryFactory --> CourseRepository
@enduml